Name Generator page now allows navigation to dashboard.

--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -83,7 +83,7 @@
 	left: 16px;
 }
 
-#characterList li:hover {
+#characterList li.charItem:hover {
 	background-color: var(--important-background);
 }
 
