--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -166,28 +166,6 @@ ul {
 	display: none;
 }
 
-#logout {
-	align-items: center;
-	border-radius: 16px;
-	bottom: 8px;
-	cursor: pointer;
-	display: flex;
-	justify-content: center;
-	opacity: 0.5;
-	padding: 4px 12px 4px 8px;
-	position: absolute;
-	right: 8px;
-	top: 8px;
-	transform: scale(-1, 1);
-	transition: 0.5s;
-	vertical-align: middle;
-	width: 32px;
-}
-
-#logout:hover {
-	background-color: var(--gm-background);
-	opacity: 1.0;
-}
 
 #modalBG.show {
 	display: flex !important;
@@ -385,6 +363,37 @@ ul {
 	color: var(--common-red);
 }
 
+.toolbar {
+	align-items: flex-start;
+	bottom: 0;
+	display: flex;
+	flex-direction: row-reverse;
+	position: absolute;
+	right: 0;
+	top: 0;
+}
+
+.toolbar > div {
+	border-radius: 16px;
+	cursor: pointer;
+	opacity: 0.5;
+	margin: 8px;
+	padding: 4px 12px 4px 8px;
+	transform: scale(-1, 1);
+	transition: 0.5s;
+	vertical-align: middle;
+	width: 32px;
+}
+
+.toolbar > div:hover {
+	background-color: var(--gm-background);
+	opacity: 1.0;
+}
+
+.toolbar > div a {
+	color: var(--content-color);
+}
+
 .flexMe {
 	align-items: center;
 	display: flex;
@@ -447,7 +456,7 @@ ul {
 		max-height: 300px;
 	}
 
-	#logout {
+	.toolbar > div {
 		background-color: var(--gm-background);
 		max-height: 40px;
 		top: 0px;
