--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -1,3 +1,31 @@
+footer {
+	margin-bottom: 20px;
+}
+
+footer a {
+	border-radius: 24px;
+	margin-left: 4px;
+	padding: 8px;
+	transition: 0.5s;
+}
+
+footer a:hover {
+	background-color: var(--gm-background);
+}
+
+footer a img {
+	height: 32px;
+	margin-right: 4px;
+	opacity: 0.75;
+	position: relative;
+	top: 12px;
+	transition: 1s;
+}
+
+footer a:hover img {
+	opacity: 1;
+}
+
 input.invalid {
 	border-color: var(--common-alert);
 	color: var(--common-alert);
@@ -167,6 +195,14 @@ input.invalid {
 }
 
 @media screen and (max-width: 575px) {
+	footer a {
+		background-color: var(--gm-background);
+	}
+
+	footer a img {
+		opacity: 1;
+	}
+
 	#characterButtons {
 		flex-direction: row;
 		flex-wrap: wrap;
