--- a/assets/css/gmscreen.css
+++ b/assets/css/gmscreen.css
@@ -79,6 +79,41 @@ h3 {
 	font-weight: bold;
 }
 
+#NPCTemplateValues {
+	display: grid;
+	grid-template-columns: auto auto;
+	margin: 20px;
+}
+
+#NPCTemplateValues > div {
+	background-color: var(--gm-background);
+	border: solid 1px var(--content-border);
+	margin-top: -1px;
+	padding: 2px 8px;
+	text-align: left;
+	white-space: nowrap;
+}
+
+#NPCTemplateValues > div:nth-child(even) {
+	margin-left: -1px;
+}
+
+#NPCTemplateValues > div:first-child {
+	border-top-left-radius: 4px;
+}
+
+#NPCTemplateValues > div:nth-child(2) {
+	border-top-right-radius: 4px;
+}
+
+#NPCTemplateValues > div:nth-last-child(2) {
+	border-bottom-left-radius: 4px;
+}
+
+#NPCTemplateValues > div:last-child {
+	border-bottom-right-radius: 4px;
+}
+
 #playerControls button {
 	display: block;
 	margin: 6px auto 0px auto;
