--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -45,17 +45,27 @@ input.invalid {
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
+	max-height: 280px;
 	padding-left: 20px;
 }
 
-#characterButtons button:first-of-type {
-	height: 50px;
+#characterButtons > button:first-of-type {
+	min-height: 50px;
 	margin: 10px 0;
 	width: 100%;
 }
 
 #characterButtons button + button {
 	margin-top: 20px;
+}
+
+#characterButtons div {
+	align-content: flex-start;
+	display: flex;
+	flex-basis: 100%;
+	flex-direction: column;
+	justify-content: flex-end;
+	margin: 20px 0 10px 0;
 }
 
 #characterCenter {
@@ -172,6 +182,43 @@ input.invalid {
 
 #printout {
 	min-width: 240px;
+}
+
+#storyModal {
+	max-height: 90%;
+	max-width: 90%;
+	min-width: 240px;
+	overflow-y: auto;
+}
+
+#storyModal > div {
+	max-height: 80%;
+	overflow-y: auto;
+}
+
+#storyModal ul {
+	display: flex;
+	flex-direction: column;
+	list-style: none;
+	margin: 10px 0px;
+	width: 100%;
+}
+
+#storyModal ul li {
+	border: solid 1px var(--content-border);
+	border-radius: 8px;
+	margin: 0px;
+	padding: 4px 8px;
+	text-align: left;
+}
+
+#storyModal ul li + li {
+	margin-top: 4px;
+}
+
+#storyModal ul li div {
+	display: flex;
+	justify-content: flex-end;
 }
 
 #taskHolder {
