Added better text editor for biography and story fields.

--- a/assets/css/charsheet.css
+++ b/assets/css/charsheet.css
@@ -143,6 +143,10 @@ section > div[id] {
 	flex-direction: column;
 }
 
+#longProfile > div {
+	width: 100%;
+}
+
 #longProfile textarea {
 	border-radius: 8px;
 	height: 240px;
