--- a/assets/css/write.css
+++ b/assets/css/write.css
@@ -46,12 +46,23 @@ textarea {
     display: flex;
     flex-basis: 100%;
     flex-direction: column;
+	overflow: auto;
 }
 
-#main div {
+#main .buttonHolder {
     display: flex;
     justify-content: space-evenly;
     padding-top: 8px;
+}
+
+#main .content {
+	display: flex;
+	flex-basis: 100%;
+	flex-direction: column;
+}
+
+#main .content .CodeMirror {
+	flex-basis: 100%;
 }
 
 #previewModal {
