--- a/assets/css/gmscreen.css
+++ b/assets/css/gmscreen.css
@@ -80,6 +80,25 @@ h3 {
 	font-weight: bold;
 }
 
+#npcResistHolder, #npcWeaknessHolder {
+	display: flex;
+}
+
+#npcResistHolder > label, #npcWeaknessHolder > label {
+	flex-basis: 1%; /* Minimize size */
+	margin-right: 4px;
+	white-space: nowrap;
+}
+
+#npcResistHolder:not(disabled), #npcWeaknessHolder:not(disabled) {
+	cursor: pointer;
+}
+
+#npcResistHolder:not(disabled):hover label, #npcWeaknessHolder:not(disabled):hover label {
+	cursor: pointer;
+	font-weight: bold;
+}
+
 #NPCTemplateValues {
 	display: grid;
 	grid-template-columns: auto auto;
@@ -136,6 +155,26 @@ h3 {
 
 #profileModal iframe {
 	border-radius: 0;
+}
+
+#NPCResistWeakModal {
+	max-width: 100%;
+	width: 300px;
+}
+
+#NPCResistForm, #NPCWeaknessForm {
+	display: flex;
+	flex-wrap: wrap;
+	margin: 10px 10px;
+}
+
+#NPCResistForm > *, #NPCWeaknessForm > * {
+	text-align: left;
+	width: 50%;
+}
+
+#NPCResistForm > * label, #NPCWeaknessForm > * label {
+	margin-left: 8px;
 }
 
 #readOut {
@@ -275,6 +314,10 @@ h3 {
 	/* Override font size from style.css */
 	#npcCurForm label {
 		font-size: medium !important;
+	}
+
+	#NPCResistForm > * input, #NPCWeaknessForm > * input {
+		height: auto;
 	}
 
 	.flexMe, #rollPanel > div > .flexMe:first-child {
