--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -275,6 +275,29 @@ input.invalid {
 	margin: 8px 0px 0px 0px !important;
 }
 
+#numericDisplayModal > div {
+	align-items: center;
+	border: solid 1px var(--content-border);
+	display: flex;
+	gap: 6px;
+	margin-top: -1px;
+	padding: 2px;
+}
+
+#numericDisplayModal > div:first-of-type {
+	border-top-left-radius: 4px;
+	border-top-right-radius: 4px;
+}
+
+#numericDisplayModal > div:last-of-type {
+	border-bottom-left-radius: 4px;
+	border-bottom-right-radius: 4px;
+}
+
+#numericDisplayModal button {
+	width: 25%;
+}
+
 #welcomeHeader {
 	margin-bottom: 12px;
 }
