--- a/assets/css/story.css
+++ b/assets/css/story.css
@@ -1,19 +1,55 @@
-#main {
+#header {
+    align-items: flex-start;
+    display: flex;
+    justify-content: center;
+}
+
+#body {
     padding: 10px 5%;
     margin: 10px auto;
     max-width: 800px;
 }
 
-#main h1:first-of-type {
+#header {
     border-bottom: solid 1px #a0a0a0;
-    font-size: 36px;
+    gap: 20px;
     margin-bottom: 20px;
+    margin-top: 10px;
     padding-bottom: 10px;
+}
+
+#header h1 {
+    font-size: 2rem;
     text-align: center;
 }
 
+#header img {
+    height: 128px;
+    width: 128px;
+}
+
 @media screen and (max-width: 820px) {
-    #main {
+    #body {
         margin: 10px;
+    }
+
+    #header img {
+        height: 200px;
+        width: 200px;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    #header {
+        align-items: center;
+        flex-direction: column;
+        font-size: 2rem;
+    }
+
+    #header img {
+        height: 300px;
+        max-height: calc(100vw - 40px);
+        max-width: calc(100vw - 40px);
+        width: 300px;
     }
 }
